--- a/data_preparation/data_exploration.ipynb
+++ b/data_preparation/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 1,
    "id": "3923d9e1",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": null,
    "id": "aa7838ec",
    "metadata": {},
    "outputs": [
@@ -39,12 +39,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "parsing log, completed traces :: 100%|██████████| 251734/251734 [01:07<00:00, 3748.45it/s]\n"
+      "c:\\Users\\jsala\\Documents\\GitHub\\MDS-PODS-Proj1\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "parsing log, completed traces :: 100%|██████████| 251734/251734 [00:54<00:00, 4627.20it/s]\n"
      ]
     }
    ],
    "source": [
-    "log = pm4py.read_xes(\"/Users/evamartin/Desktop/MDS/curs1/PODS/MDS-PODS-Proj1/Full_BPI_Challenge_2019.xes\")\n",
+    "log = pm4py.read_xes(\"../Full_BPI_Challenge_2019.xes\")\n",
     "# Filter events that occur before 2018\n",
     "log['time:timestamp'] = pd.to_datetime(log['time:timestamp'])\n",
     "log = log[log['time:timestamp'] >= '2018-01-01 00:00:00']"
@@ -2014,7 +2016,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -2028,7 +2030,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
